# bookerics

./: .env.example  .gitignore  .sesskey  AGENTS.md  LICENSE  Procfile  README.md  dev-reqs.txt  fly.toml  pyproject.toml  pyrightconfig.json  requirements.txt  test_rt.py
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
bookerics/: ai.py  cache.py  components.py  constants.py  core.py  database.py  errors.py  main.py  pages.py  routes.py  run_apps.py  utils.py
bookerics/src/: main.py  pages.py  utils.py
bookerics/src/endpoints/: index.py
bookerics/static/: bookmarklet.html
bookerics/static/css/: components.css  main.css
bookerics/static/js/: bookmarklets.js  custom.js
feeds/: index.html  rss.xml  rss.xsl
html/: bookmarklet.html
sqlite_web/: __main__.py  sqlite_web.py
sqlite_web/static/css/: sqlbrowse.css
sqlite_web/templates/: base.html  base_table.html  base_tables.html  table_content.html  table_update.html
src/: components.py  constants.py  database.py  main.py  pages.py  utils.py
src/endpoints/: index.py
static/: bookmarklet.html  keywords.json  style.css
static/css/: styles.css
static/js/: bookmarklet.js  custom.js
tests/: test_homepage.py
tools/: bookerics_importer  get_feral_ip.sh  migrate_s3_to_feral.py  upload_ssl_certs.py
tools/bookerics_browser_extension/: background.js  bookmarklet.js  manifest.json
tools/bookerics_firefox_extension/: README.md  background.js  bookerics.xpi  bookmarklet.js  content-script.js  manifest.json  popup.html  popup.js
