[project]
name = "bookerics"
version = "0.1.0"
description = "bookmarks, but for Erics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Eric Hamiter", email = "ehamiter@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.0",
    "asyncssh>=2.18.0",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.19",
    "shot-scraper>=1.8",
]

[project.scripts]
bookerics = "bookerics.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pyright]
venvPath = "."
venv = ".venv"
